# mlx-comp

./: .gitignore  LICENSE  README.md  mise.toml  openwebui_filter.py  pyproject.toml
Formula/: llmlingua.rb  llmlingua.rb-20260714  mlx-comp.rb
src/llmlingua/: gui.py  main.py  server.py
src/mlx_comp/: gui.py  main.py  server.py
