[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-comp"
version = "0.1.1"
description = "LLMLingua-2 FastAPI server with macOS Menu Bar app"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "llmlingua",
    "rumps",
]

[project.scripts]
mlx-comp = "mlx_comp.main:main"
